# cypy-gui-extended

./: .env.example  LICENSE  README.md  build.py  pyproject.toml  run-gui.bat  run.bat
.github/workflows/: build.yml
cypy/: __main__.py  app.py
cypy/core/: __init__.py  config.py  desktop.py  errors.py  filesystem.py  models.py  reporting.py  settings.py  translator.py  utils.py  yolo_onnx.py
cypy/core/detection/: __init__.py  box_filters.py  detector.py  text_assist.py  text_onnx.py  yolo_onnx.py
cypy/core/documents/: __init__.py  archive_processor.py  archive_safety.py  common.py  folder_processor.py  image_pipeline.py  image_processor.py  pdf_processor.py
cypy/core/imaging/: __init__.py  bubble_geometry.py  cropper.py  fonts.py  line_breaker.py  mosaic.py  renderer.py  text_layout.py  translation_reflow.py
cypy/core/providers/: __init__.py  base.py  custom.py  factory.py  gemini.py  http.py  openai_provider.py  openrouter.py  zen.py
cypy/gui/: __init__.py  app.py  events.py  main_window.py  resources.py  theme.py
tests/: helpers.py  test_archive_processing.py  test_batch_output_safety.py  test_batch_provider_lock.py  test_bubble_geometry.py  test_compatibility_imports.py  test_detection_and_imaging.py  test_font_resolver.py  test_gui_core.py  test_gui_resources.py  test_image_pipeline.py  test_image_processor_smoke.py  test_line_breaker.py  test_pdf_integrity.py  test_provider_factory.py  test_provider_http.py  test_settings_and_suffix.py  test_translation_reflow.py  test_translation_response_parser.py  test_translation_retry_and_lock.py
(+22 files in other folders)
