[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cypy"
dynamic = ["version"]
description = "CYPY: Cyrene's Python Manga Translator - Auto translate manga panels using YOLO and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8,<6",
    "PyMuPDF>=1.23,<2",
    "numpy>=1.24,<3",
    "Pillow>=10,<13",
    "onnxruntime>=1.16,<2",
    "google-genai>=1,<3",
    "python-dotenv>=1,<2",
    "requests>=2.31,<3",
    "rarfile>=4,<5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10"
]
build = [
    "pyinstaller>=6,<7"
]

[project.scripts]
cypy = "cypy.app:main"
cypy-gui = "cypy.gui.app:main"

[tool.setuptools.packages.find]
include = ["cypy*"]

[tool.setuptools.dynamic]
version = {attr = "cypy.core.version.APP_VER"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
